fixed that some labels were not visible in google chrome

--- a/client/css/style.css
+++ b/client/css/style.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-svg {
-    width: 100%;
-    height: auto;
-}
 
 h2 {
     text-align: center;
